[package]

name = "blog_os"
version = "0.1.0"
authors = ["Jeremiah Webb Jeremiah_L_Webb@hotmail.com"]

# the profile used for `cargo build`
#[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
#[profile.release]
#panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33
